force-app/main/default/objects/Payment_Information__c/Payment_Information__c.object-meta.xml
<CustomObject>
    <label>Payment Information</label>
    <nameField>
        <displayFormat>PI-{000000}</displayFormat>
        <label>Payment Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>