force-app/main/default/objects/Payment_Information__c/fields/Information__c.field-meta.xml
<CustomField>
    <fullName>Information__c</fullName>
    <label>Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>