force-app/main/default/objects/Payment_Information__c/fields/ValidBy__c.field-meta.xml
<CustomField>
    <fullName>ValidBy__c</fullName>
    <label>Valid By</label>
    <type>Date</type>
</CustomField>